-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: core-svc
-
Environment:
Mac OS 10.9.2.
-
b08
-
Not verified
jdk9/dev/jdk/src/share/back/eventFilter.c:291:41: error: '&&' within '||' [-Werror,-Wlogical-op-parentheses]
return (major > 1 || major == 1 && minor >= 2);
~~ ~~~~~~~~~~~^~~~~~~~~~~~~
dev/jdk/src/share/back/eventFilter.c:291:41: note: place parentheses around the '&&' expression to silence this warning
return (major > 1 || major == 1 && minor >= 2);
^
( )
1 error generated.
make[2]: *** [dk9/dev/build/macosx-x86_64-normal-server-fastdebug/jdk/objs/libjdwp/eventFilter.o] Error 1
make[1]: *** [libs-only] Error 2
make: *** [jdk-only] Error 2
return (major > 1 || major == 1 && minor >= 2);
~~ ~~~~~~~~~~~^~~~~~~~~~~~~
dev/jdk/src/share/back/eventFilter.c:291:41: note: place parentheses around the '&&' expression to silence this warning
return (major > 1 || major == 1 && minor >= 2);
^
( )
1 error generated.
make[2]: *** [dk9/dev/build/macosx-x86_64-normal-server-fastdebug/jdk/objs/libjdwp/eventFilter.o] Error 1
make[1]: *** [libs-only] Error 2
make: *** [jdk-only] Error 2