8038163: Build failure on Mac OS 10.9.2 (Mavericks) due to warning treated as error

Add parentheses to conditional expression to appease compiler.

Reviewed-by: sla, alanb